--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "require-dir": "^0.1.0",
     "respond.js": "^1.4.2",
     "run-sequence": "^1.0.2",
+    "swiper": "^3.0.7",
     "through": "^2.3.6",
     "underscore": "^1.7.0"
   },
